--- a/Outcome.html
+++ b/Outcome.html
@@ -72,9 +72,10 @@ form {
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav w-100">
-                    <a class="nav-link active" aria-current="page" href="Income.html">Income</a>
-                    <a class="nav-link" href="Outcome.html">Outcome</a>
-                    <a class="nav-link" href="About Us.html">About Us</a>
+                    <a class="nav-link active" aria-current="page" href="Income.html">INCOME</a>
+                    <a class="nav-link" href="Outcome.html">OUTCOME</a>
+                    <a class="nav-link" href="About Us.html">ABOUT US</a>
+                    <a class="nav-link" href="index.html" onclick="logout()">LOG OUT</a>
                 </div>
             </div>
         </div>
