--- a/About Us.html
+++ b/About Us.html
@@ -13,8 +13,8 @@
     <div class="container-fluid" id="bodi">
 
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" >
+        <div class="container-fluid" id="navincome">
             <a class="navbar-brand" href="Main.html">
                 <img src="vecteezy_asset-allocation-vector-icon-design_21342258.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
                 Hallo <span id="spanduk"></span> 
@@ -24,9 +24,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav w-100">
-                    <a class="nav-link active" aria-current="page" href="Income.html">Income</a>
-                    <a class="nav-link" href="Outcome.html">Outcome</a>
-                    <a class="nav-link" href="About Us.html">About Us</a>
+                    <a class="nav-link active" aria-current="page" href="Income.html">INCOME</a>
+                    <a class="nav-link" href="Outcome.html">OUTCOME</a>
+                    <a class="nav-link" href="About Us.html">ABOUT US</a>
+                    <a class="nav-link" href="index.html" onclick="logout()">LOG OUT</a>
                 </div>
             </div>
         </div>
