--- a/Income.html
+++ b/Income.html
@@ -58,10 +58,11 @@
         font-weight: bolder;
     }
   }
+
 </style>
 <body>   
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" >
-        <div class="container-fluid" id="navincome">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="hey" >
+        <div class="container-fluid" id="navcolor">
             <a class="navbar-brand" href="Main.html">
                 <img src="vecteezy_asset-allocation-vector-icon-design_21342258.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
                 Hallo <span id="spanduk"></span> 
@@ -71,9 +72,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav w-100">
-                    <a class="nav-link active" aria-current="page" href="Income.html">INCOME</a>
+                    <a class="nav-link" href="Income.html">INCOME</a>
                     <a class="nav-link" href="Outcome.html">OUTCOME</a>
-                    <a class="nav-link" href="About Us.html">ABOUT US</a>
+                        <a class="nav-link" href="About Us.html">ABOUT US</a>
                     <a class="nav-link" href="index.html" onclick="logout()">LOG OUT</a>
                 </div>
             </div>
@@ -106,7 +107,7 @@
             </select>
         </div>
         <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-primary" id="masi"  type="submit">Button</button>
+            <button class="btn btn-primary" id="masi"  type="submit">Submit</button>
           </div>
           
         </form>
