--- a/Main.html
+++ b/Main.html
@@ -11,25 +11,25 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="hey" >
-            <div class="container-fluid" id="navcolor">
-                <a class="navbar-brand" href="Main.html">
-                    <img src="vecteezy_asset-allocation-vector-icon-design_21342258.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                    Hallo <span id="spanduk"></span> 
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav w-100">
-                        <a class="nav-link active" aria-current="page" href="Income.html">INCOME</a>
-                        <a class="nav-link" href="Outcome.html">OUTCOME</a>
-                            <a class="nav-link" href="About Us.html">ABOUT US</a>
-                        <a class="nav-link" href="index.html" onclick="logout()">LOG OUT</a>
-                    </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="hey" >
+        <div class="container-fluid" id="navcolor">
+            <a class="navbar-brand" href="Main.html">
+                <img src="vecteezy_asset-allocation-vector-icon-design_21342258.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                Hallo <span id="spanduk"></span> 
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav w-100">
+                    <a class="nav-link " href="Income.html">INCOME</a>
+                    <a class="nav-link" href="Outcome.html">OUTCOME</a>
+                        <a class="nav-link" href="About Us.html">ABOUT US</a>
+                    <a class="nav-link" href="index.html" onclick="logout()">LOG OUT</a>
                 </div>
             </div>
-        </nav>
+        </div>
+    </nav>
         <div id="kedua">
         <div id="saldosss" class="rounded">
             <h2 id="saldomu">Saldo :</h2>
