--- a/Outcome.html
+++ b/Outcome.html
@@ -61,26 +61,25 @@ form {
    
 
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" >
-        <div class="container-fluid" id="navoutcome">
-            <a class="navbar-brand" href="Main.html">
-                <img src="vecteezy_asset-allocation-vector-icon-design_21342258.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                Hallo <span id="spanduk"></span> 
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav w-100">
-                    <a class="nav-link active" aria-current="page" href="Income.html">INCOME</a>
-                    <a class="nav-link" href="Outcome.html">OUTCOME</a>
-                    <a class="nav-link" href="About Us.html">ABOUT US</a>
-                    <a class="nav-link" href="index.html" onclick="logout()">LOG OUT</a>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="hey" >
+            <div class="container-fluid" id="navcolor">
+                <a class="navbar-brand" href="Main.html">
+                    <img src="vecteezy_asset-allocation-vector-icon-design_21342258.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    Hallo <span id="spanduk"></span> 
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav w-100">
+                        <a class="nav-link "  href="Income.html">INCOME</a>
+                        <a class="nav-link" href="Outcome.html">OUTCOME</a>
+                            <a class="nav-link" href="About Us.html">ABOUT US</a>
+                        <a class="nav-link" href="index.html" onclick="logout()">LOG OUT</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
-    
+        </nav>
 </div>  
 
  <div class="haha">
@@ -101,12 +100,13 @@ form {
                 <option selected disabled value=''>Pilih Jenis Transaksi</option>
                 <option value="Makan">Makan</option>
                 <option value="Main">Main</option>
+                <option value="Edukasi">Edukasi</option>
                 <option value="Belanja">Belanja</option>
                 <option value="Lainnya">Lainnya</option>
             </select>
         </div>
         <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-primary" id="konfir" type="submit">Button</button>
+            <button class="btn btn-primary" id="konfir" type="submit">Submit</button>
           </div>
         </form>
     </div>
