--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h5 class="halo">Input Your Name</h5>
             <div class="hilang input-group mb-3" >
                 <form action="Main.html" onsubmit="pindahs()" >
-                    <input type="text" class="form-control " name="userss" id="forom" placeholder="Masukkan Nama" aria-label="Recipient's username" aria-describedby="button-addon2" >
+                    <input type="text" class="form-control " name="userss" id="forom" required placeholder="Masukkan Nama" aria-label="Recipient's username" aria-describedby="button-addon2" >
                     <button class="btn btn-outline-secondary " value="Submit" type="submit"  >Submit</button> 
                       
                 </form>      
